# model-training

./: .bandit  .gitignore  .pylintrc  README.md  dockerfile  dvc.yaml  metrics.json  pylintrc  pyproject.toml  release.yml  requirements.txt  run.py  setup.cfg  setup.py
.dvc/: config
.github/workflows/: release.yml
lint/: custom_rules.py
metrics/: ml_scores.json
notebooks/: 1.0-g17-exploration_of_data.ipynb  2.0-g17-demonstration_of_data.ipynb  demonstration.ipynb  exploration.ipynb
sentiment_model_training/modeling/: evaluate.py  get_data.py  preprocess.py  train.py
tests/: conftest.py  test_data.py  test_feature_and_data.py  test_ml_infrastructure.py  test_model_development.py  test_monitoring.py  test_mutamorphic.py  testdata.py
