[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-training"
version = "0.0.0"  # Placeholder
description = "Training the sentiment model"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.8",
  "colorama>=0.4.6",  "joblib>=1.5.0",
  "lib-ml @ git+https://github.com/remla25-team17/lib-ml.git",
  "nltk>=3.9.1",
  "numpy<2.0,>=1.23.0",
  "pandas>=2.2.3", 
  "python-dateutil>=2.9.0",
  "pytz>=2025.2",
  "regex>=2024.11.6",
  "requests"==2.31.0,
  "scikit-learn>=1.6.1",
  "scipy>=1.15.2",
  "six>=1.17.0",
  "threadpoolctl>=3.6.0",
  "tqdm>=4.67.1",
  "tzdata>=2025.2"
]

[tool.setuptools]
packages = ["sentiment_model_training"]

[tool.setuptools.package-dir]
"" = "."