[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-training"
version = "0.0.0"  # Placeholder
description = "Training the sentiment model"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.5.0",
  "lib-ml @ git+https://github.com/remla25-team17/lib-ml.git",
  "numpy>=1.23.0,<2.0",
  "pandas>=2.0.0",
  "requests>=2.31.0",
  "scikit-learn>=1.0.0",
  "pylint>=2.17,<3.0",
  "flake8",
  "anybadge",
  "coverage-badge",
  "coverage",
  "pytest"
]

[tool.setuptools]
packages = ["sentiment_model_training"]

[tool.setuptools.package-dir]
"" = "."